--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "gulp": "^3.9.1",
     "gulp-atomizer": "^3.0.7",
     "gulp-html-minifier": "^0.1.8"
+  },
+  "devDependencies": {
+    "atomizer-emmet-compat": "0.1.2"
   }
 }
