--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
     "atomizer-emmet-compat": "0.1.2",
     "browser-sync": "2.18.13",
     "gulp": "3.9.1",
-    "gulp-atomizer": "3.0.7",
-    "gulp-html-minifier": "0.1.8"
+    "gulp-atomizer": "3.0.7"
   }
 }
