--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "start": "./node_modules/gulp/bin/gulp.js"
+  },
   "devDependencies": {
     "atomizer-emmet-compat": "0.1.2",
     "browser-sync": "2.18.13",
