--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   },
   "devDependencies": {
     "browser-sync": "2.18.13",
-    "gulp": "3.9.1",
+    "gulp": "^4.0.0",
     "gulp-atomizer": "3.0.7"
   }
 }
