--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
   "devDependencies": {
     "browser-sync": "2.18.13",
     "gulp": "3.9.1",
-    "gulp-atomizer": "^3.0.7"
+    "gulp-atomizer": "https://github.com/idmytro/gulp-atomizer.git#2021"
   }
 }
