--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "browser-sync": "2.18.13",
     "gulp": "3.9.1",
     "gulp-atomizer": "^3.0.7"
+  },
+  "engines": {
+    "node": ">=10.0.0 <12.0.0"
   }
 }
