--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "browser-sync": "2.18.13",
     "gulp": "3.9.1",
     "gulp-atomizer": "https://github.com/idmytro/gulp-atomizer.git#2021"
+  },
+  "engines": {
+    "node": ">= 12.0.0"
   }
 }
