--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "devDependencies": {
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
-    "gulp-atomizer": "https://github.com/idmytro/gulp-atomizer.git#2021"
+    "gulp-atomizer": "^3.0.7"
   },
   "engines": {
     "node": ">= 12.0.0"
