--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "start": "./node_modules/gulp/bin/gulp.js"
   },
   "devDependencies": {
+    "atomizer": "^3.8.0",
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
     "gulp-atomizer": "^3.0.7"
